# example-docker-makefile-build

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
